firewall.conf
*filter
:INPUT ACCEPT [7666:740958]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5800:760226]
:SYN_FLOOD - [0:0]
:droplist - [0:0]
-A INPUT -j droplist 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -f -j LOG --log-level 7 
-A INPUT -p icmp -f -j DROP 
-A INPUT -p icmp -m limit --limit 1/sec --limit-burst 2 -j ACCEPT 
-A INPUT -p icmp -m limit --limit 1/sec --limit-burst 2 -j LOG --log-level 7 
-A INPUT -p icmp -j DROP 
-A INPUT -p tcp -m state --state NEW -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A INPUT -p tcp -m state --state NEW -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j SYN_FLOOD 
-A FORWARD -j droplist 
-A FORWARD -o lo -j ACCEPT 
-A FORWARD -p icmp -f -j LOG --log-level 7 
-A FORWARD -p icmp -f -j DROP 
-A OUTPUT -j droplist 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -f -j LOG --log-level 7 
-A OUTPUT -p icmp -f -j DROP 
-A OUTPUT -p icmp -j ACCEPT 
-A syn-flood -m limit --limit 5/sec --limit-burst 10 -j RETURN 
-A syn-flood -j LOG --log-level 7 
-A syn-flood -j DROP 
COMMIT
